<resources>
    <string name="app_name">Liga</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total"><b>2:0</b></string>
    <string name="today_matches">Today matches</string>
    <string name="logo_header">FOOTBALL</string>
    <string name="desc_img">desc</string>
    <string name="today">TODAY</string>
    <string name="immediate">IMMEDIATE</string>
    <string name="manchester_united">Manchester United</string>
    <string name="manchester">Manchester</string>
    <string name="_100">100</string>
    <string name="uefa_champions_league">UEFA Champions League</string>
    <string name="table">Table</string>
    <string name="matches">Matches</string>
    <string name="group_a">Group A</string>
    <string name="_10">10</string>
    <string name="textview">TextView</string>
    <string name="_18">18</string>
    <string name="_5">5</string>
    <string name="season">season :</string>
    <string name="_2022">2022</string>
    <string name="start">start :</string>
    <string name="end">end :</string>
    <string name="winner">winner :</string>
    <string name="_2022_06_21">2022-06-21</string>
    <string name="manchester_city_fc">Manchester City FC</string>
    <string name="gk">GK</string>
    <string name="manuel_neuer">Manuel Neuer</string>
    <string name="germany">Germany</string>
    <string name="_1986_03_27">1986-03-27</string>
    <string name="team">Team</string>
    <string name="country">Country</string>
    <string name="stadium">Stadium</string>
    <string name="couch">Couch</string>
    <string name="status">start</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="registration_profile">Registration profile:</string>
    <string name="sign_in">Sign In</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>