<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/team_bg"
    tools:context=".ui.team.TeamFragment">

    <ImageView
        android:id="@+id/imgLogoTeamFrag"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/premier"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/desc_img" />

    <TextView
        android:id="@+id/tvNameTeam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/team"
        android:textColor="@color/white"
        android:background="#391A83EA"
        app:layout_constraintStart_toEndOf="@+id/imgLogoTeamFrag"
        app:layout_constraintTop_toTopOf="@+id/imgLogoTeamFrag" />

    <TextView
        android:id="@+id/tvContryTeamLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/country"
        android:textColor="@color/white"
        android:background="#391A83EA"
        app:layout_constraintStart_toEndOf="@+id/imgLogoTeamFrag"
        app:layout_constraintTop_toBottomOf="@+id/tvNameTeam" />

    <TextView
        android:id="@+id/tvStadiumTeamLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/stadium"
        android:textColor="@color/white"
        android:background="#391A83EA"
        app:layout_constraintStart_toEndOf="@+id/imgLogoTeamFrag"
        app:layout_constraintTop_toBottomOf="@+id/tvContryTeamLable" />

    <TextView
        android:id="@+id/tvCouchTeamLable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/couch"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="#391A83EA"
        app:layout_constraintStart_toEndOf="@+id/imgLogoTeamFrag"
        app:layout_constraintTop_toBottomOf="@+id/tvStadiumTeamLable" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTeamFrag"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogoTeamFrag"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/item_team" />
</androidx.constraintlayout.widget.ConstraintLayout>